		- new 'canRelock' field to define if the radar missile can change lock after it's launched (AIM-7F,AIM-120) or if can only track the target that it was launched (AIM-9C,R-3R)
		- new 'hasDataLink' field that can be used to Launch Radar/Heat missiles and guide them later with help of an external radar or out of range of your radar/seeker an re-acquire a lock when inside radar/seeker range.
		- Renamed 'radarTimeout' to 'maxLockBreakTime' and now it also has use on HeatSeekers with DataLink

v1.6.2.0
IMPROVEMENTS / FIXES
- General:
	- Fix TweakScale config for Typhoon engine (again).
	- Add Toggle/Enable/Disable pivot action groups to the Claw variants.
	- Add an action group option to give unlimited pivot range to the Claw variants.
	- Tweaks so that asteroids have the proper HP in flight mode.
	- Optimisation of some vector operations.
	- Adds variant texture for ground radars.
	- Fix SIDAM texture variants for standard brown or greyscale.
- Armor:
	- Make the adjustable armor 'clamped' and 'triangle type' options persistent and initialised correctly in the PAW.
- UI:
	- Adjust formatting of some debug telemetry.
	- Fix EMP Hellfire texture URL.
	- Add an indent for missile and CM settings.
- Vessel Mover:
	- Don't apply "Don't Avoid Collisions" while lowering vessels.
- Vessel Spawning:
	- Re-register EVA Kerbals in spawned vessels as active, since KSP de-registers this for some reason.
	- Add a default text for the custom template name field.
	- Automatically add the current custom template to the list if it's not already there when clicking 'save' without requiring clicking 'new' first. (I.e., don't require 'new'→'save' for the initial template.)
	- When using "Fill Seats" = "Cockpits or Combat Seat", include the first command seat if neither a cockpit nor combat seat are present.
	- Fix an issue with the spawning routine hanging when using asteroids game modes.
	- Fix the inward/outward spawn orientation for circular spawning.
- Detectors: